--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Puzzle</title>
     <script type="text/javascript" src="p5.min.js"></script>
     <script type="text/javascript" src="statics.js"></script>
-    <script type="text/javascript" src="inputHandler.js"></script>    
+    <script type="text/javascript" src="commandHandler.js"></script>    
     <script type="text/javascript" src="node.js"></script>
     <script type="text/javascript" src="path.js"></script>
     <script type="text/javascript" src="layout.js"></script>
